--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,5 @@
 # Discord Bot token https://discord.com/developers/applications
-DISCORD_BOT_TOKEN=
+DISCORD_BOT_TOKEN=MTA0Mzg3NjI5NzA4MTg4MDYzNg.Gm8GmH.WdUzxP6mDqu1b8XGb7QHESF_BrfAuTE4n5UHdo
 
 # Unofficial ChatGPT authentication (only Plus acoount) # https://chat.openai.com/api/auth/session
 UNOFFICIAL_PAID=True
